src/snapshots/snapshots/brs_bot__telegram__config__tests__empty_allowed_updates.snap
---
source: src/telegram/config.rs
expression: scenario_builder(scenario).build()
---
Err(
    InvalidAllowedUpdates,
)
