src/snapshots/snapshots/brs_bot__telegram__config__tests__empty_bot_id.snap
---
source: src/telegram/config.rs
expression: scenario_builder(scenario).build()
---
Err(
    EmptyField(
        "bot_id",
    ),
)
