src/snapshots/snapshots/brs_bot__telegram__config__tests__empty_bot_token.snap
---
source: src/telegram/config.rs
expression: scenario_builder(scenario).build()
---
Err(
    EmptyField(
        "bot_token",
    ),
)
