src/snapshots/snapshots/brs_bot__telegram__config__tests__invalid_base_url.snap
---
source: src/telegram/config.rs
expression: scenario_builder(scenario).build()
---
Err(
    InvalidBaseUrl(
        RelativeUrlWithoutBase,
    ),
)
