src/snapshots/snapshots/brs_bot__telegram__config__tests__limit_above_max.snap
---
source: src/telegram/config.rs
expression: scenario_builder(scenario).build()
---
Err(
    InvalidGetUpdatesLimit(
        101,
    ),
)
