src/snapshots/snapshots/brs_bot__telegram__config__tests__limit_zero.snap
---
source: src/telegram/config.rs
expression: scenario_builder(scenario).build()
---
Err(
    InvalidGetUpdatesLimit(
        0,
    ),
)
